=== HEAD

* Make Model.count not issue a database query if using the static_cache plugin (jeremyevans)

* Handle more corner cases in the many_to_one_pk_lookup plugin (jeremyevans)

* Handle database connection during initialization in jdbc adapter (jeremyevans) (#646)

* Add Database.after_initialize, which takes a block and calls the block with each newly created Database instance (ged) (#641)

* Add a guide detailing PostgreSQL-specific support (jeremyevans)

* Make model plugins deal with frozen instances (jeremyevans)

* Allow freezing of model instances for models without primary keys (jeremyevans)

* Reflect constraint_validations extension :allow_nil=>true setting in the database constraints (jeremyevans)

* Add Plugins.after_set_dataset for easily running code after set_dataset (jeremyevans)

* Add Plugins.inherited_instance_variables for easily setting class instance variables when subclassing (jeremyevans)

* Add Plugins.def_dataset_methods for easily defining class methods that call dataset methods (jeremyevans)

* Make lazy_attributes plugin no longer depend on identity_map plugin (jeremyevans)

* Make Dataset#get with an array of values handle case where no row is returned (jeremyevans)

* Make caching plugin handle memcached API for deletes if ignore_exceptions option is used (rintaun) (#639)

=== 3.46.0 (2013-04-02)

* Add Dataset#cross_apply and Dataset#outer_apply on Microsoft SQL Server (jeremyevans)

* Speed up threaded connection pools when :connection_handling=>:queue is used (jeremyevans)

* Allow external connection pool classes to be loaded automatically (jeremyevans)

* Add Dataset#with_pk! for model datasets, like #with_pk, but raising instead of returning nil (jeremyevans)

* Add Dataset#first!, like #first, but raising a Sequel::NoMatchingRow exception instead of returning nil (jeremyevans)

* Dataset #select_map, #select_order_map, and #get no longer support a plain string inside an array of arguments (jeremyevans)
